--- a/css/style.css
+++ b/css/style.css
@@ -73,20 +73,46 @@
 /* Exercise 1 */
 .ex-1-square {
     transition: background-color 2s linear;
-    -webkit-transition: background-color 2s linear;
 }
 .ex-1-square:hover{
     background-color: red;
-
 }
 
 /* Exercise 2 */
 .ex-2-square {
     transition: width 4s;
-    -webkit-transition: width 4s;
 }
 .ex-2-square:active{
     width:100%;
 }
 
 /* Exercise 3 */
+.ex-3-square {
+    transition: border-radius 2s;
+}
+
+.ex-3-square:hover{
+    border-radius: 50%;
+}
+
+/* Exercise 4 */
+.ex-4-square {
+    transition: opacity 2s;
+}
+
+.ex-4-square:hover {
+    opacity: 0;
+}
+
+/* Exercise 5 */
+.ex-5-square {
+    transition: all 1s;
+}
+
+.ex-5-square:hover{
+    transform: scale(1.5,1.5);
+}
+.ex-5-square:active{
+    transform:scale(0.5,0.5);
+}
+
