--- a/css/style.css
+++ b/css/style.css
@@ -174,3 +174,105 @@
     0% { transform:rotate(0deg);} 
     75% { transform:rotate(270deg);}
 }
+
+/* Exercise 12 */
+.ex-12-button:hover .ex-12-top-white {
+    animation-name: topspacemovementone;
+    animation-duration: 1.5s;
+    animation-timing-function: linear; 
+}
+
+@keyframes topspacemovementone {
+    0% {
+        top: -10px;
+        left: 10%;
+    }
+    50%{
+        top: -10px;
+        left: 65%;
+    }
+    100% {
+        top: -10px;
+        left: 10%;
+    }
+}
+
+.ex-12-button:hover .ex-12-bottom-white {
+    animation-name: bottomspacemovementone;
+    animation-duration: 1.5s;
+    animation-timing-function: linear; 
+}
+
+@keyframes bottomspacemovementone {
+    0% {
+        bottom: -10px;
+        right: 20%;
+    }
+    50%{
+        bottom: -10px;
+        right: 55%;
+    }
+    100% {
+        bottom: -10px;
+        right: 20%;
+    }
+}
+
+/* Exercise 13 */
+.ex-13-button:hover .ex-13-top-white {
+    animation-name: topspacemovementtwo;
+    animation-duration: 2s;
+    animation-timing-function: linear; 
+}
+
+@keyframes topspacemovementtwo {
+    0% {
+        top: -10px;
+        left: 10%;
+    }
+    25% {
+        top: -10px;
+        left: calc(100% - 30px);
+    }
+    50% {
+        top: calc(100% - 10px);
+        left:calc(100% - 30px);
+    }
+    75% {
+        top: calc(100% - 10px);
+        left: -10%;
+    }
+    100% {
+        top: -10px;
+        left: -10%;
+    }
+}
+
+.ex-13-button:hover .ex-13-bottom-white {
+    animation-name: bottomspacemovementtwo;
+    animation-duration: 2s;
+    animation-timing-function: linear; 
+}
+
+@keyframes bottomspacemovementtwo {
+    0% {
+        bottom: -10px;
+        right: 20%;
+    }
+    25% {
+        bottom: -10px;
+        right: calc(100% - 30px);
+    }
+    50%{
+        bottom: calc(100% - 10px);
+        right:calc(100% - 30px);
+    }
+    75%{
+        bottom: calc(100% - 10px);
+        right: -20%;
+    }
+    100% {
+        bottom: -10px;
+        right: -20%;
+    }
+}
