--- a/css/style.css
+++ b/css/style.css
@@ -230,17 +230,21 @@
         top: -10px;
         left: 10%;
     }
-    25% {
+    30% {
         top: -10px;
         left: calc(100% - 30px);
     }
-    50% {
-        top: calc(100% - 10px);
+    45% {
+        top: 100%;
         left:calc(100% - 30px);
     }
     75% {
-        top: calc(100% - 10px);
-        left: -10%;
+        top: 100%;
+        left: 0;
+    }
+    90%{
+        top:-10px;
+        left:-15px;
     }
     100% {
         top: -10px;
@@ -259,20 +263,25 @@
         bottom: -10px;
         right: 20%;
     }
-    25% {
+    30% {
         bottom: -10px;
         right: calc(100% - 30px);
     }
-    50%{
-        bottom: calc(100% - 10px);
+    45%{
+        bottom: 100%;
         right:calc(100% - 30px);
+
     }
     75%{
-        bottom: calc(100% - 10px);
-        right: -20%;
+        bottom: 100%;
+        right:0;
+    }
+    90%{
+        bottom: -10px;
+        right: -15px;
     }
     100% {
         bottom: -10px;
-        right: -20%;
+        right: 20%;
     }
 }
